# cztDevDemos

./: README.md
Math/: montecarlo_calInterger.py  montecarlo_calPI.py
PasswordManage/: PasswordManage.sln
PasswordManage/PasswordManage/: Form1.Designer.cs  Form1.cs  PasswordManage.csproj  PasswordStruct.cs  Program.cs
PasswordManage/PasswordManage/Properties/: AssemblyInfo.cs  Resources.Designer.cs
PyQt5统计信息熵demo/: main.py
Python控制台小游戏/: base.py  data.json  dev.py  globalvar.py  main.py  prefab.py  src.json  srcedit.py
Python控制台小游戏/dev/: action.py  animation.py  character.py  game.py  item.py  main.py  map.py  prefab.py  src.json  srcedit.py  vector.py  widget.py  world.py
Python控制台小游戏/dev/global_res/: gfunc.py  gvar.py
Python控制台小游戏/version1.0/: data.json  dev.py  srcedit.py
Python控制台小游戏/version1.1/: Game.py  action.py  animation.py  character.py  data.json  event.py  gfunc.py  gvar.py  item.py  main.py  map.py  prefab.py  vector.py  widget.py  world.py
YDsender/: YDsender.sln
YDsender/YDsender/: Form1.Designer.cs  Form1.cs  Program.cs  YDsender.csproj
YDsender/YDsender/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
cmakedemo/multi/: CMakeLists.txt  compiler.ps1
cmakedemo/multi/main/: CMakeLists.txt  dynamicmain.cpp
cmakedemo/multi/mylib/: CMakeLists.txt  mylib.cpp
cmakedemo/single/: CMakeLists.txt  main.cpp
cmakedemo/single/include/: api.h
cztBlueTools/: cztBlueTools.sln
cztBlueTools/cztBlueTools/: MainForm.Designer.cs  MainForm.cs  MainForm.resx  PanelAutoScreenshot.cs  PanelAutoScreenshot.resx  PanelPasswordManager.cs  PanelPasswordManager.resx  Program.cs  cztBlueTools.csproj  packages.config
cztBlueTools/cztBlueTools/DataStruct/: AccountData.cs
cztBlueTools/cztBlueTools/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
cztBlueTools/cztBlueTools/WorkHandler/: ClickMockHandler.cs  ClipboardImageMonitorHandler.cs  HotKeyHandler.cs  ParseInputHandler.cs  ScreenshotHandler.cs
dll动态和静态链接demo/: dynamicmain.cpp  mylib.h  staticmain.cpp
gcc中dll动态和静态链接demo/: mylib.h  staticmain.cpp
